# pds-2019

./: .gitignore  README.md  RUNME.sh  comandos.txt  ml.R  ml.py  pyproject.toml
config/: settings.toml
data2/: Artists.csv
docs/: artists_description.csv  variables_descripcion.xlsx
external_code/: estructura_python.sh  run_sql.sh  settings.toml
moma/: moma.py
scripts/: create_db.sh  create_virual_env.sh  download_data.sh  moma_data.txt  run_sql.sh
scripts/external_code/: create_raw_tables.sql  moma.py  sql_helper.R
sql/: create-joined_table.sql  create_clean_tables.sql  create_cohort.sql  create_features.sql  create_features_summary.sql  create_joined_table.sql  create_labels.sql  create_raw_tables.sql  create_schemas.sql  create_semantic_tables.sql  to_cleaned.sql  to_semantic.sql
tests/: README.md
