[tool.poetry]
name = "moma"
version = "0.1.0"
description = ""
authors = ["ADP"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = {version = "^1.17", extras = ["all"]}
toml = "^0.10.0"
click = "^7.0"
psycopg2 = {version = "^2.8", extras = ["all"]}

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
flake8-docstrings = "^1.5"
xdoctest = "^0.10.3"
pydocstyle = "^4.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
mypy = "^0.740.0"
pytest-cov = "^2.8"
pytest-mock = "^1.12"
coverage = "^4.5"
tox = "^3.14"
towncrier = "^19.2"
sphinx = "^2.2"
sphinx_rtd_theme = "^0.4.3"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
